[workspace.package]
version = "0.7.0-alpha.5"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-rpxy"
repository = "https://github.com/junkurihara/rust-rpxy"
license = "MIT"
readme = "./README.md"
edition = "2021"
publish = false

[workspace]
members = ["rpxy-bin", "rpxy-lib"]
exclude = ["submodules"]
resolver = "2"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
