[package]
name = "h3-quinn"
version = "0.0.0"
authors = ["Original from hyperium/h3", "Jun Kurihara"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h3 = { path = "../h3/h3/" }
bytes = "1.3.0"
futures-util = { version = "0.3.25", default-features = false, features = [
  "io",
] }
quinn = { version = "0.9.3", default-features = false }
quinn-proto = { version = "0.9.2", default-features = false }
