[package]
name = "rpxy-acme"
description = "ACME manager library for `rpxy`"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

[features]
post-quantum = ["rustls-post-quantum"]

[dependencies]
url = { version = "2.5.7" }
ahash = "0.8.12"
thiserror = "2.0.17"
tracing = "0.1.41"
async-trait = "0.1.89"
base64 = "0.22.1"
aws-lc-rs = { version = "1.14.1", default-features = false, features = [
  "aws-lc-sys",
] }
blocking = "1.6.2"
rustls = { version = "0.23.34", default-features = false, features = [
  "std",
  "aws_lc_rs",
] }
rustls-platform-verifier = { version = "0.6.1" }
rustls-acme = { path = "../submodules/rustls-acme/", default-features = false, features = [
  "aws-lc-rs",
  "webpki-roots",
] }
rustls-post-quantum = { version = "0.2.4", optional = true }
tokio = { version = "1.48.0", default-features = false, features = [
  "rt",
  "macros",
] }
tokio-util = { version = "0.7.16", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
