[package]
name = "rpxy"
description = "`rpxy`: a simple and ultrafast http reverse proxy"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["http3-quinn", "cache", "rustls-backend", "acme", "post-quantum"]
# default = ["http3-s2n", "cache", "rustls-backend", "acme", "post-quantum"]
http3-quinn = ["rpxy-lib/http3-quinn"]
http3-s2n = ["rpxy-lib/http3-s2n"]
native-tls-backend = ["rpxy-lib/native-tls-backend"]
rustls-backend = ["rpxy-lib/rustls-backend"]
webpki-roots = ["rpxy-lib/webpki-roots"]
cache = ["rpxy-lib/cache"]
acme = ["rpxy-lib/acme", "rpxy-acme"]
post-quantum = ["rpxy-lib/post-quantum"]

[dependencies]
rpxy-lib = { path = "../rpxy-lib/", default-features = false, features = [
  "sticky-cookie",
] }

mimalloc = { version = "*", default-features = false }
anyhow = "1.0.95"
rustc-hash = "2.1.0"
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
tokio = { version = "1.42.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
tokio-util = { version = "0.7.13", default-features = false }
async-trait = "0.1.83"
futures-util = { version = "0.3.31", default-features = false }

# config
clap = { version = "4.5.23", features = ["std", "cargo", "wrap_help"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
hot_reload = "0.1.8"
serde_ignored = "0.1.10"

# logging
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

################################
# cert management
rpxy-certs = { path = "../rpxy-certs/", default-features = false, features = [
  "http3",
] }

rpxy-acme = { path = "../rpxy-acme/", default-features = false, optional = true }

[dev-dependencies]
