[package]
name = "rpxy"
description = "`rpxy`: a simple and ultrafast http reverse proxy"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "http3-quinn",
  "cache",
  "rustls-backend",
  "sticky-cookie",
  "acme",
  "post-quantum",
]
# default = [
#   "http3-s2n",
#   "cache",
#   "rustls-backend",
#   "sticky-cookie",
#   "acme",
#   "post-quantum",
# ]
http3-quinn = ["rpxy-lib/http3-quinn"]
http3-s2n = ["rpxy-lib/http3-s2n"]
native-tls-backend = ["rpxy-lib/native-tls-backend"]
rustls-backend = ["rpxy-lib/rustls-backend"]
webpki-roots = ["rpxy-lib/webpki-roots"]
cache = ["rpxy-lib/cache"]
acme = ["rpxy-lib/acme", "rpxy-acme"]
post-quantum = ["rpxy-lib/post-quantum"]
sticky-cookie = ["rpxy-lib/sticky-cookie"]

[dependencies]
rpxy-lib = { path = "../rpxy-lib/", default-features = false }

mimalloc = { version = "0.1.48", default-features = false }
anyhow = "1.0.100"
ahash = "0.8.12"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
tokio = { version = "1.48.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
tokio-util = { version = "0.7.16", default-features = false }
async-trait = "0.1.89"
futures-util = { version = "0.3.31", default-features = false }

# config
clap = { version = "4.5.49", features = ["std", "cargo", "wrap_help"] }
toml = { version = "0.9.8", default-features = false, features = [
  "parse",
  "serde",
] }
hot_reload = "0.2.0"
serde_ignored = "0.1.14"

# logging
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

################################
# cert management
rpxy-certs = { path = "../rpxy-certs/", default-features = false, features = [
  "http3",
] }

rpxy-acme = { path = "../rpxy-acme/", default-features = false, optional = true }

[dev-dependencies]
