[package]
name = "rpxy-certs"
description = "Cert manager library for `rpxy`"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["http3"]
post-quantum = ["rustls-post-quantum"]
http3 = []

[dependencies]
rustc-hash = { version = "2.1.0" }
tracing = { version = "0.1.41" }
derive_builder = { version = "0.20.2" }
thiserror = { version = "2.0.9" }
hot_reload = { version = "0.1.8" }
async-trait = { version = "0.1.84" }
rustls = { version = "0.23.20", default-features = false, features = [
  "std",
  "aws_lc_rs",
] }
rustls-pemfile = { version = "2.2.0" }
rustls-webpki = { version = "0.102.8", default-features = false, features = [
  "std",
  "aws_lc_rs",
] }
rustls-post-quantum = { version = "0.2.1", optional = true }
x509-parser = { version = "0.16.0" }

[dev-dependencies]
tokio = { version = "1.42.0", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
