[package]
name = "rpxy-certs"
description = "Cert manager library for `rpxy`"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["http3"]
post-quantum = ["rustls-post-quantum"]
http3 = []

[dependencies]
ahash = { version = "0.8.12" }
tracing = { version = "0.1.41" }
derive_builder = { version = "0.20.2" }
thiserror = { version = "2.0.12" }
hot_reload = { version = "0.1.9" }
async-trait = { version = "0.1.88" }
rustls = { version = "0.23.27", default-features = false, features = [
  "std",
  "aws_lc_rs",
] }
rustls-pemfile = { version = "2.2.0" }
rustls-webpki = { version = "0.103.3", default-features = false, features = [
  "std",
  "aws-lc-rs",
] }
rustls-post-quantum = { version = "0.2.2", optional = true }
x509-parser = { version = "0.17.0" }

[dev-dependencies]
tokio = { version = "1.45.0", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
