[package]
name = "rpxy-trusted-proxies"
description = "Trusted proxy alias resolver for rpxy"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
ipnet = "2.12.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
